@@ -4,7 +4,6 @@ import org.apereo.cas.authentication.CoreAuthenticationTestUtils;
 import org.apereo.cas.authentication.CoreAuthenticationUtils;
 import org.apereo.cas.authentication.principal.PrincipalFactoryUtils;
 import org.apereo.cas.util.CollectionUtils;
-import org.apereo.cas.util.junit.EnabledIfContinuousIntegration;
 import org.apereo.cas.util.junit.EnabledIfPortOpen;
 import org.apereo.cas.util.serialization.SerializationUtils;
 
@@ -16,9 +15,6 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cloud.autoconfigure.RefreshAutoConfiguration;
-import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.TestPropertySource;
 
 import javax.persistence.Column;
@@ -27,7 +23,8 @@ import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import javax.sql.DataSource;
-import java.util.Collections;
+
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -37,14 +34,6 @@ import static org.junit.jupiter.api.Assertions.*;
  * @author Misagh Moayyed
  * @since 6.0.0
  */
-@SpringBootTest(classes = {
-    RefreshAutoConfiguration.class,
-    DatabaseAuthenticationTestConfiguration.class
-})
-@DirtiesContext
-@EnabledIfPortOpen(port = 5432)
-@EnabledIfContinuousIntegration
-@Tag("Postgres")
 @TestPropertySource(properties = {
     "database.user=postgres",
     "database.password=password",
@@ -53,8 +42,11 @@ import static org.junit.jupiter.api.Assertions.*;
     "database.url=jdbc:postgresql://localhost:5432/",
     "database.dialect=org.hibernate.dialect.PostgreSQL95Dialect"
 })
-public class QueryDatabaseAuthenticationHandlerPostgresTests {
+@EnabledIfPortOpen(port = 5432)
+@Tag("Postgres")
+public class QueryDatabaseAuthenticationHandlerPostgresTests extends BaseDatabaseAuthenticationHandlerTests {
     private static final String SQL = "SELECT * FROM caspgusers where username=?";
+
     private static final String PASSWORD_FIELD = "password";
 
     @Autowired
@@ -91,7 +83,7 @@ public class QueryDatabaseAuthenticationHandlerPostgresTests {
     @Test
     @SneakyThrows
     public void verifySuccess() {
-        val map = CoreAuthenticationUtils.transformPrincipalAttributesListIntoMultiMap(Collections.singletonList("locations"));
+        val map = CoreAuthenticationUtils.transformPrincipalAttributesListIntoMultiMap(List.of("locations"));
         val q = new QueryDatabaseAuthenticationHandler("DbHandler", null,
             PrincipalFactoryUtils.newPrincipalFactory(), 0,
             this.dataSource, SQL, PASSWORD_FIELD,
@@ -118,7 +110,6 @@ public class QueryDatabaseAuthenticationHandlerPostgresTests {
         @Column
         private String password;
 
-        //@Type(type = "string-array")
         @Column(
             name = "locations",
             columnDefinition = "text[]"
